syntax = "proto3";

package sf.solana.spl.token.swap.v1;

message Fees {
  uint64 trade_fee_numerator = 1;
  uint64 trade_fee_denominator = 2;
  uint64 owner_trade_fee_numerator = 3;
  uint64 owner_trade_fee_denominator = 4;
  uint64 owner_withdraw_fee_numerator = 5;
  uint64 owner_withdraw_fee_denominator = 6;
  uint64 host_fee_numerator = 7;
  uint64 host_fee_denominator = 8;
}

message SwapCurve {
  string curve_type = 1;
}

message Arg {
  string instruction_type = 1;
  uint32 nonce = 2;
  Fees fees = 3;
  SwapCurve swap_curve = 4;
  uint64 amount_in = 5;
  uint64 minimum_amount_out = 6;
  uint64 pool_token_amount = 7;
  uint64 maximum_token_a_amount = 8;
  uint64 maximum_token_b_amount = 9;
  uint64 source_token_amount = 10;
  uint64 minimum_pool_token_amount = 11;
  uint64 destination_token_amount = 12;
  uint64 maximum_pool_token_amount = 13;
}

message SplTokenSwapMeta {
  string block_date = 1;
  int64 block_time = 2;
  string tx_id = 3;
  string dapp = 4;
  uint64 block_slot = 5;
  uint32 instruction_index = 7;
  bool is_inner_instruction = 8;
  uint32 inner_instruction_index = 9;
  Arg arg = 10;
}

message Output {
  repeated SplTokenSwapMeta data = 1;
}